<resources>
    <string name="app_name">Assignment</string>
    <string name="add_student">Add Student</string>
    <string name="add_class">Add Class</string>
    <string name="show_all_classes">show ALl Classes</string>
    <string name="student_management">Student Management</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset">reset</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="update_student">update Student</string>
    <string name="remove_student">Remove Student</string>
    <string name="do_you_want_to_remove_this_student">Do you want to remove this student</string>
    <string name="title_activity_student_in_class">StudentInClass</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>